# university

./: .env  docker-compose.yml
backend/: .env  Dockerfile  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
backend/migration/versions/: 1f0e2170bd92_users.py  78e076e64a2b_user_login_is_unique_and_pk_now.py  7ad4ac7a484a_admin_column_added.py  81bfe00bee9a_add_new_tables.py  9d09e1cb9b76_initial.py  a2c18debff5b_university_db_tables_added.py
backend/src/: main.py
backend/src/myoldproject/: config.py  main.py
backend/src/myoldproject/core/: config.py
backend/src/myoldproject/crud/: user.py
backend/src/myoldproject/models/: user.py
backend/src/myoldproject/schemas/: user.py
backend/src/myoldproject/services/: auth.py
backend/src/myoldproject/utils/: main.py
backend/src/project/controllers/: auth.py  depences.py  healthcheck.py  university_db_controllers.py
backend/src/project/core/: config.py  exceptions.py  university_db_exeptions.py
backend/src/project/infrastructure/postgres/: models.py
backend/src/project/infrastructure/postgres/repository/: university_db_repo.py  user_repo.py
backend/src/project/instances/: token.py  university_db_instances.py  user.py
backend/src/project/utils/: jwt_utils.py
frontend/: Dockerfile
frontend/auth/: index.html
frontend/main/: index.html  script.js  style.css
frontend/reg/: index.html  script.js  style.css
